<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".mainlayout"
    tools:openDrawer="start">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#190F4E"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:id="@+id/scrollView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:layout_editor_absoluteX="28dp"
                tools:layout_editor_absoluteY="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    tools:layout_editor_absoluteX="44dp"
                    tools:layout_editor_absoluteY="0dp">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="match_parent"
                        android:layout_height="173dp"
                        app:srcCompat="@drawable/slideone" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="79dp"
                        android:layout_marginTop="20dp"
                        android:text="Welcome To Seghal Institute Of English/IELTS"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:textColor="#000000"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="117dp"
                        android:fontFamily="@font/roboto"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:text="@string/Welcome_text"
                        android:textColor="#000000" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="match_parent"
                        android:layout_height="166dp"
                        app:srcCompat="@drawable/slidethree" />

                    <TextView
                        android:layout_width="398dp"
                        android:layout_height="47dp"
                        android:layout_marginTop="20dp"
                        android:layout_gravity="center"
                        android:text="About Us"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="84dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="8dp"
                        android:fontFamily="@font/roboto"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:text="@string/about_u_text"
                        android:textColor="#000000"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.617"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/scrollView2" />

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="match_parent"
                        android:layout_height="166dp"
                        app:srcCompat="@drawable/slidenott" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="64dp"
                        android:paddingTop="10sp"
                        android:text="Our History"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="99dp"
                        android:fontFamily="@font/roboto"
                        android:paddingLeft="15dp"
                        android:paddingRight="10dp"
                        android:text="@string/hist_text"
                        android:textColor="#000000" />

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        app:srcCompat="@drawable/groupimage" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="64dp"
                        android:paddingTop="10sp"
                        android:text="Our Mission"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="99dp"
                        android:fontFamily="@font/roboto"
                        android:paddingLeft="15dp"
                        android:paddingRight="10dp"
                        android:text="@string/our_mission_text"
                        android:textColor="#000000" />


                    <android.support.constraint.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="166dp"
                        android:background="#0D0C0C">

                        <ImageView
                            android:id="@+id/imageView6"
                            android:layout_width="89dp"
                            android:layout_height="52dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginBottom="8dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.147"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.04"
                            app:srcCompat="@drawable/logo" />

                        <TextView
                            android:layout_width="109dp"
                            android:layout_height="57dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginBottom="8dp"
                            android:text="@string/phone_number_text"
                            android:textColor="#FFFFFF"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.57"
                            app:layout_constraintStart_toEndOf="@+id/imageView6"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.12" />

                        <TextView
                            android:layout_width="208dp"
                            android:layout_height="29dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="88dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginBottom="8dp"
                            android:text="sehgalinstitute2012@gmail.com"
                            android:textColor="#FFFFFF"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.55"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="1.0" />

                        <TextView
                            android:layout_width="234dp"
                            android:layout_height="29dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginBottom="8dp"
                            android:text="www.sehgalinstituteofenglish.com"
                            android:textColor="#FFFFFF"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.596"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.628" />

                    </android.support.constraint.ConstraintLayout>


                </LinearLayout>


            </ScrollView>


        </FrameLayout>


    </LinearLayout>
    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_layout"
        app:menu="@menu/drawer_menu" />


</android.support.v4.widget.DrawerLayout>